--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@progress/kendo-vue-inputs": "^3.11.0",
     "@progress/kendo-vue-intl": "^3.11.0",
     "axios": "^1.3.3",
+    "babylonjs": "^6.10.0",
+    "babylonjs-gui": "^6.10.0",
+    "babylonjs-loaders": "^6.10.0",
+    "babylonjs-materials": "^6.10.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "emailjs-com": "^3.2.0",
